--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,24 +3,48 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      environment:
+        type: choice
+        description: 'Environment'
+        required: true
+        options:
+          - intg
+          - staging
+          - prod
+        default: 'intg'
+      to-deploy:
+        description: 'Version to deploy'
+        required: true
 permissions:
   id-token: write
   contents: write
 jobs:
-  pre-deploy:
-    uses: nationalarchives/dr2-github-actions/.github/workflows/lambda_build.yml@main
-    with:
-      repo-name: dr2-disaster-recovery
-      artifact-name: dr2-disaster-recovery
-      build-command: sbt assembly
-    secrets:
-      MANAGEMENT_ACCOUNT: ${{ secrets.MANAGEMENT_ACCOUNT }}
-      WORKFLOW_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
   deploy:
-    needs: pre-deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - run: gh workflow run deploy.yml -f environment=intg -f to-deploy=${{ needs.pre-deploy.outputs.next-version }}
+      - uses: actions/checkout@v4
+      - run: |
+          git config --global user.email digitalpreservation@nationalarchives.gov.uk
+          git config --global user.name tna-digital-archiving-jenkins
+          git checkout -b $BRANCH_NAME
+          git push -u origin $BRANCH_NAME
+          sbt '+release with-defaults'
         env:
-          GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+          BRANCH_NAME: version-bump-${{ github.run_id }}${{ github.run_attempt }}
+      - name: Create Pull Request
+        run: gh pr create --fill --label 'Version bump'
+        env:
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_PAT }}
+      - name: Send success message
+        uses: nationalarchives/dr2-github-actions/.github/actions/slack-send@main
+        with:
+          message: ":white_check_mark: ${{ inputs.library-name }} has been published"
+          slack-url: ${{ secrets.SLACK_WEBHOOK }}
+      - name: Send failure message
+        uses: nationalarchives/dr2-github-actions/.github/actions/slack-send@main
+        if: failure()
+        with:
+          message: ":warning: Build failed for ${{ inputs.library-name }} <https://github.com/nationalarchives/${{ inputs.repo-name }}/actions/runs/${{ github.run_id }}|View the failed workflow>"
+          slack-url: ${{ secrets.SLACK_WEBHOOK }}
