--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -7,6 +7,13 @@ appender.console.name = STDOUT
 appender.console.layout.type = JsonTemplateLayout
 appender.console.layout.eventTemplateUri = classpath:EcsLayout.json
 
-rootLogger.level = info
+appender.file.type = File
+appender.file.name = FILE
+appender.file.fileName = /poduser/logs/disaster-recovery.log
+appender.file.layout.type = JsonTemplateLayout
+appender.file.layout.eventTemplateUri = classpath:EcsLayout.json
 
+# Root Logger Configuration
+rootLogger.level = info
 rootLogger.appenderRef.stdout.ref = STDOUT
+rootLogger.appenderRef.file.ref = FILE
