--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,6 @@
-name: Deploy DR2 Disaster Recovery Lambda
+name: Deploy Disaster Recovery
+permissions:
+  id-token: write
 on:
   workflow_dispatch:
     inputs:
@@ -14,20 +16,37 @@ on:
       to-deploy:
         description: 'Version to deploy'
         required: true
-
-permissions:
-  id-token: write
-  contents: write
+run-name: Deploying Disaster Recovery ${{inputs.to-deploy}} to ${{inputs.environment}}
 jobs:
   deploy:
-    uses: nationalarchives/dr2-github-actions/.github/workflows/lambda_deploy.yml@main
-    with:
-      lambda-name: ${{ github.event.inputs.environment }}-disaster-recovery
-      deployment-package:  dr2-disaster-recovery.jar
-      environment: ${{ github.event.inputs.environment }}
-      to-deploy: ${{ github.event.inputs.to-deploy }}
-    secrets:
-      ACCOUNT_NUMBER: ${{ secrets.ACCOUNT_NUMBER }}
-      MANAGEMENT_ACCOUNT: ${{ secrets.MANAGEMENT_ACCOUNT }}
-      WORKFLOW_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
-      SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+    runs-on: ubuntu-latest
+    environment: ${{ github.event.inputs.environment }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Configure AWS credentials for ECR
+        uses: aws-actions/configure-aws-credentials@v4.0.2
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.MANAGEMENT_ACCOUNT }}:role/TDRGithubActionsRoleMgmt
+          aws-region: eu-west-2
+          role-session-name: ECRLogin
+      - name: Login to ECR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com
+      - name: Tag image
+        run: |
+          docker pull ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/disaster-recovery:${{ github.event.inputs.to-deploy }}
+          docker tag ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/disaster-recovery:${{ github.event.inputs.to-deploy }} ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/disaster-recovery:${{ github.event.inputs.environment }}
+          docker push ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/disaster-recovery:${{ github.event.inputs.environment }}
+      - name: Send success message
+        uses: nationalarchives/tdr-github-actions/.github/actions/slack-send@main
+        with:
+          message: "*disaster-recovery* :whale: The '${{ github.event.inputs.to-deploy }}' image has been tagged with '${{ github.event.inputs.environment }}' in ECR"
+          slack-url: ${{ secrets.SLACK_WEBHOOK }}
+      - name: Send failure message
+        uses: nationalarchives/dr2-github-actions/.github/actions/slack-send@main
+        if: failure()
+        with:
+          message: ":warning: Build failed for disaster recovery <https://github.com/nationalarchives/dr2-disaster-recovery/actions/runs/${{ github.run_id }}|View the failed workflow>"
+          slack-url: ${{ secrets.SLACK_WEBHOOK }}
