Temp change to add this branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - DR2-1601-rebuild-image-and-fix-build-process
 permissions:
   id-token: write
   contents: write
