Fix the logging

--- a/disaster-recovery-webapp/src/main/resources/log4j2.properties
+++ b/disaster-recovery-webapp/src/main/resources/log4j2.properties
@@ -3,9 +3,17 @@ status = warn
 name = DR2LambdaLogConfiguration
 
 appender.console.type = Console
-appender.console.name = consoleLogger
-appender.console.json.type = JsonTemplateLayout
+appender.console.name = STDOUT
+appender.console.layout.type = JsonTemplateLayout
+appender.console.layout.eventTemplateUri = classpath:EcsLayout.json
 
+appender.file.type = File
+appender.file.name = FILE
+appender.file.fileName = /poduser/logs/disaster-recovery-webapp.log
+appender.file.layout.type = JsonTemplateLayout
+appender.file.layout.eventTemplateUri = classpath:EcsLayout.json
+
+# Root Logger Configuration
 rootLogger.level = info
-
-rootLogger.appenderRef.stdout.ref = consoleLogger
+rootLogger.appenderRef.stdout.ref = STDOUT
+rootLogger.appenderRef.file.ref = FILE
