Add proxy for sqs

--- a/disaster-recovery-builder/src/main/resources/application.conf
+++ b/disaster-recovery-builder/src/main/resources/application.conf
@@ -2,3 +2,4 @@ queue-url=${QUEUE_URL}
 database-path=${DATABASE_PATH}
 ocfl-repo-dir=${OCFL_REPO_DIR}
 ocfl-work-dir=${OCFL_WORK_DIR}
+proxy-url=${?HTTPS_PROXY}
