--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -5,7 +5,7 @@ on:
       - closed
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: ${{ github.base_ref == 'main' && github.event.pull_request.merged == true && !contains(github.event.pull_request.labels.*.name, 'Version bump') }}
     steps:
       - uses: actions/checkout@v4
