Custodial copy concurrency and other bugs
* Download files into a folder called /downloads in the work directory
* Delete this folder on container start
* Add debug logging for the OCFL library. This is temporary but it'll be useful on prod for a while
* Add a recursive method which will pull up to 50 messages from the SQS queue before processing.
* Remove the parallel processing for multiple messages for the same IO
* Add parallel processing for entities with different IOs
* Add a new enum for the Result to replace the fiber Outcome. I don't want to use `Try`
* Simplify the logic around deleted/non-deleted in Main
* Stop grouping by path id in the OcflService createObjects method. All paths inside here will be for the same IO so it's pointless.
* Call stage changes once per path with the semaphore around it. I don't know if this is causing a problem but it can't be helping.
* Add a MOVE_SOURCE option so the /downloads folder doesn't fill up.
* Move the object lock to a file system backed H2 database. The OCFL usage instructions says to use this if you're processing in parallel.
* Update the tests to match the new structure.

--- a/custodial-copy-backend/src/main/resources/log4j2.properties
+++ b/custodial-copy-backend/src/main/resources/log4j2.properties
@@ -17,3 +17,13 @@ appender.file.layout.eventTemplateUri = classpath:EcsLayout.json
 rootLogger.level = info
 rootLogger.appenderRef.stdout.ref = STDOUT
 rootLogger.appenderRef.file.ref = FILE
+
+logger.io-ocfl.name = io.ocfl
+logger.io-ocfl.level = debug
+logger.io-ocfl.appenderRef.stdout.ref = STDOUT
+logger.io-ocfl.appenderRef.file.ref = FILE
+
+logger.file-util.name = io.ocfl.core.util.FileUtil
+logger.file-util.level = info
+logger.file-util.appenderRef.stdout.ref = STDOUT
+logger.file-util.appenderRef.file.ref = FILE
