Spell the config parameter correctly

--- a/custodial-copy-confirmer/src/main/resources/application.conf
+++ b/custodial-copy-confirmer/src/main/resources/application.conf
@@ -3,4 +3,4 @@ ocfl-work-dir=${OCFL_WORK_DIR}
 proxy-url=${?HTTPS_PROXY}
 sqs-url=${SQS_QUEUE_URL}
 dynamo-table-name=${DYNAMO_TABLE_NAME}
-dynamo-atribute-name=${DYNAMO_ATTRIBUTE_NAME}
+dynamo-attribute-name=${DYNAMO_ATTRIBUTE_NAME}
