Update to use assetId.
In the post-ingest table, we need the asset ID to be in there as this is
the id we send in the messages.

But the OCFL objects are stored as the Preservica id so we need to look
up the Preservica id from the asset id (via the SourceID identifier) and
then use this to check the OCFL repo

--- a/custodial-copy-confirmer/src/main/resources/application.conf
+++ b/custodial-copy-confirmer/src/main/resources/application.conf
@@ -4,3 +4,5 @@ proxy-url=${?HTTPS_PROXY}
 sqs-url=${SQS_QUEUE_URL}
 dynamo-table-name=${DYNAMO_TABLE_NAME}
 dynamo-attribute-name=${DYNAMO_ATTRIBUTE_NAME}
+preservica-url=${PRESERVICA_URL}
+preservica-secret-name=${PRESERVICA_SECRET_NAME}
