--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,15 +5,10 @@ on:
       - main
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: nationalarchives/dr2-github-actions/.github/actions/run-git-secrets@main
-      - uses: nationalarchives/dr2-github-actions/.github/actions/slack-send@main
-        if: failure()
-        with:
-          message: ":warning: Secrets found in repository: *${{ inputs.repo-name }}* @channel"
-          slack-url: ${{ secrets.SLACK_WEBHOOK }}
+      - uses: sbt/setup-sbt@v1
       - uses: coursier/cache-action@v6
       - uses: actions/setup-java@v4
         with:
