Make OcflService generic & make max currency optional with a default of 50

--- a/custodial-copy-reconciler/src/main/resources/application.conf
+++ b/custodial-copy-reconciler/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 preservica-secret-name=${PRESERVICA_SECRET_NAME}
 database-path=${DATABASE_PATH}
-max-concurrency=${MAX_CONCURRENCY}
+max-concurrency=50
+max-concurrency=${?MAX_CONCURRENCY}
 ocfl-repo-dir=${OCFL_REPO_DIR}
 ocfl-work-dir=${OCFL_WORK_DIR}
 proxy-url=${?HTTPS_PROXY}
