--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,10 +7,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: sbt/setup-sbt@v1
-      - uses: coursier/cache-action@v6
-      - uses: actions/setup-java@v4
+      - uses: actions/checkout@09d2acae674a48949e3602304ab46fd20ae0c42f
+      - uses: sbt/setup-sbt@3c1652372d153b35a30472b3e5b2f1f204eff746
+      - uses: coursier/cache-action@4e2615869d13561d626ed48655e1a39e5b192b3c
+      - uses: actions/setup-java@ae2b61dbc685e60e4427b2e8ed4f0135c6ea8597
         with:
           distribution: 'temurin'
           java-version: '21'
