DDSM-446 Get download dir from env vars.
All of the containers are sharing the same download directory and this
is causing problems when they restart as they're all trying to delete
the same directory.
This now gets it from an environment variable so we can pass one in (or
not if it's not needed)

--- a/custodial-copy-backend/src/main/resources/application.conf
+++ b/custodial-copy-backend/src/main/resources/application.conf
@@ -2,6 +2,7 @@ preservica-secret-name=${PRESERVICA_SECRET_NAME}
 sqs-queue-url=${SQS_QUEUE_URL}
 repo-dir=${REPO_DIR}
 work-dir=${WORK_DIR}
+download-dir=${DOWNLOAD_DIR}
 proxy-url=${?HTTPS_PROXY}
 version-path=${VERSION_PATH}
 topic-arn=${SNS_TOPIC_ARN}
