--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,10 +7,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@09d2acae674a48949e3602304ab46fd20ae0c42f
-      - uses: sbt/setup-sbt@3c1652372d153b35a30472b3e5b2f1f204eff746
-      - uses: coursier/cache-action@4e2615869d13561d626ed48655e1a39e5b192b3c
-      - uses: actions/setup-java@ae2b61dbc685e60e4427b2e8ed4f0135c6ea8597
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+      - uses: sbt/setup-sbt@a627500d27445f8c5021755a439829b6e78e3358 # v1.1.15
+      - uses: actions/setup-java@be666c2fcd27ec809703dec50e508c2fdc7f6654 # v5.2.0
         with:
           distribution: 'temurin'
           java-version: '21'
