DR2-2625 Use Wiz cli v1.
The download link and commands have changed

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
       - run: |
-          curl -o wizcli https://wizcli.app.wiz.io/wizcli
+          curl -o wizcli https://downloads.wiz.io/v1/wizcli/latest/wizcli-linux-amd64
           chmod +x ./wizcli
           ./wizcli auth --id ${{ secrets.WIZ_CLIENT_ID }} --secret ${{ secrets.WIZ_CLIENT_SECRET }}
           sbt scalafmtCheckAll test Docker/publishLocal scanDockerImage
