DR2-2449 Ignore last 24 hours in reconciler
Because the Preservica and OCFL threads run in parallel, the date needs
to be checked in two places. For Preservica, it's changing the end date
on the updated-since call.

For OCFL, the only date we have is the date the IO was created which
we're now checking.

The number of days is configurable.

--- a/custodial-copy-reconciler/src/main/resources/application.conf
+++ b/custodial-copy-reconciler/src/main/resources/application.conf
@@ -5,3 +5,5 @@ max-concurrency=${?MAX_CONCURRENCY}
 ocfl-repo-dir=${OCFL_REPO_DIR}
 ocfl-work-dir=${OCFL_WORK_DIR}
 proxy-url=${?HTTPS_PROXY}
+days-to-ignore=1
+days-to-ignore=${?DAYS_TO_IGNORE}
