DR2-2695 Make concurrency configurable.
There's a new environment variable with a default.

I've also tidied up some of the implicits in the classes.

--- a/custodial-copy-re-indexer/src/main/resources/application.conf
+++ b/custodial-copy-re-indexer/src/main/resources/application.conf
@@ -1,3 +1,5 @@
 database-path=${DATABASE_PATH}
 ocfl-repo-dir=${OCFL_REPO_DIR}
 ocfl-work-dir=${OCFL_WORK_DIR}
+max-concurrency=${?MAX_CONCURRENCY}
+max-concurrency=1000
